--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -3,15 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllProductFragment">
+    tools:context=".CartFragment">
+
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginBottom="40dp"
-        android:id="@+id/allProductRV"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/cartRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
-
-
 
 </RelativeLayout>
