--- a/app/src/main/res/layout/cart_row_layout.xml
+++ b/app/src/main/res/layout/cart_row_layout.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<soup.neumorphism.NeumorphCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="260dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp"
     android:layout_margin="5dp"
@@ -114,37 +114,44 @@
 
                             />
 
-                        <Button
+                        <TextView
+                            android:layout_gravity="center"
+                            android:clickable="true"
+                            android:foreground="?android:attr/selectableItemBackground"
                             android:id="@+id/qytDescBtn"
-                            android:backgroundTint="#96E2B7"
-                            android:layout_width="53dp"
+                            android:layout_width="40dp"
+                            android:paddingBottom="10dp"
                             android:layout_height="40dp"
                             android:textAllCaps="false"
-                            app:cornerRadius="20dp"
-                            app:icon="@drawable/descrese_qtyicon" />
+                            android:drawableLeft="@drawable/descrese_qtyicon"
+                            />
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/cQytTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
+                            android:layout_gravity="center"
                             android:layout_marginLeft="11dp"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginBottom="4dp"
+                            android:layout_marginRight="7dp"
                             android:fontFamily="sans-serif-smallcaps"
                             android:text="1"
                             android:textSize="25sp"
 
                             />
 
-                        <Button
+                        <TextView
+                            android:layout_gravity="center"
+                            android:clickable="true"
+                            android:foreground="?android:attr/selectableItemBackground"
                             android:id="@+id/increaseQytBtn"
-                            android:layout_width="53dp"
+                            android:layout_width="40dp"
                             android:layout_height="40dp"
-                            android:layout_marginLeft="8dp"
-                            android:backgroundTint="#96E2B7"
+                            android:paddingBottom="10dp"
+                            android:layout_marginLeft="13dp"
                             android:textAllCaps="false"
-                            app:cornerRadius="20dp"
-                            app:icon="@drawable/increase_qyticon" />
+                            android:drawableLeft="@drawable/increase_qyticon"
+                         />
 
                     </LinearLayout>
 
@@ -159,7 +166,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Size:"
-                            android:textSize="20sp"
+                            android:textSize="18sp"
                             android:fontFamily="sans-serif-smallcaps"
                             />
                          <TextView
@@ -185,7 +192,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Color:"
-                            android:textSize="20sp"
+                            android:textSize="18sp"
                             android:fontFamily="sans-serif-smallcaps"
                             />
                          <TextView
@@ -210,7 +217,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="SubTotal:"
-                            android:textSize="20sp"
+                            android:textSize="18dp"
                             android:fontFamily="sans-serif-smallcaps"
                             />
                          <TextView
@@ -238,9 +245,7 @@
 
 
 
-        <androidx.cardview.widget.CardView
-            app:cardCornerRadius="10dp"
-            app:cardElevation="4dp"
+        <TextView
             android:layout_margin="3dp"
             android:id="@+id/removeCard"
             android:clickable="true"
@@ -248,17 +253,14 @@
             android:layout_alignParentRight="true"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:paddingLeft="5dp"
+            android:drawableLeft="@drawable/ic_clear_black_24dp"
             >
-            <ImageView
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_clear_black_24dp"
-                />
-        </androidx.cardview.widget.CardView>
+
+        </TextView>
 
 
 
     </RelativeLayout>
 
-</androidx.cardview.widget.CardView>
+</soup.neumorphism.NeumorphCardView>
