--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#F1E3E8"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
 
@@ -15,12 +16,9 @@
         android:background="@android:color/white"
         >
 
-        <androidx.cardview.widget.CardView
-            app:layout_scrollFlags="enterAlwaysCollapsed|scroll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
             <com.smarteist.autoimageslider.SliderView
+                app:layout_scrollFlags="enterAlwaysCollapsed|scroll"
                 android:id="@+id/imageSlider"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
@@ -37,8 +35,6 @@
                 app:sliderIndicatorUnselectedColor="#FFF"
                 app:sliderScrollTimeInSec="1"
                 app:sliderStartAutoCycle="true" />
-        </androidx.cardview.widget.CardView>
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/topCatagoriesRV"
             app:layout_scrollFlags="enterAlwaysCollapsed|scroll"
@@ -120,14 +116,14 @@
 
 
         <com.google.android.material.tabs.TabLayout
+            app:tabMode="scrollable"
             android:id="@+id/tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabIndicatorColor="@android:color/holo_red_light"
             app:tabSelectedTextColor="@android:color/holo_blue_light"
             app:tabTextColor="@android:color/holo_orange_dark"
-
-
+            app:tabIconTint="#F1C3C3"
             />
 
 
