--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -6,7 +6,6 @@
     android:background="#F1E3E8"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-
     tools:context=".HomePageFragment">
 
 
@@ -21,20 +20,20 @@
                 app:layout_scrollFlags="enterAlwaysCollapsed|scroll"
                 android:id="@+id/imageSlider"
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="250dp"
                 app:sliderAnimationDuration="600"
                 app:sliderAutoCycleDirection="back_and_forth"
                 app:sliderAutoCycleEnabled="true"
                 app:sliderIndicatorAnimationDuration="600"
-                app:sliderIndicatorGravity="center_horizontal|bottom"
-                app:sliderIndicatorMargin="15dp"
                 app:sliderIndicatorOrientation="horizontal"
-                app:sliderIndicatorPadding="3dp"
                 app:sliderIndicatorRadius="2dp"
                 app:sliderIndicatorSelectedColor="#5A5A5A"
                 app:sliderIndicatorUnselectedColor="#FFF"
                 app:sliderScrollTimeInSec="1"
-                app:sliderStartAutoCycle="true" />
+                app:sliderStartAutoCycle="true"
+                />
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/topCatagoriesRV"
             app:layout_scrollFlags="enterAlwaysCollapsed|scroll"
@@ -128,8 +127,6 @@
 
 
     </com.google.android.material.appbar.AppBarLayout>
-
-
 
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/view_pager"
