--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,4 +30,9 @@
         android:name="com.example.ecommerceapp.CartFragment"
         android:label="fragment_cart"
         tools:layout="@layout/fragment_cart" />
+    <fragment
+        android:id="@+id/mainCatagoriesFragment"
+        android:name="com.example.ecommerceapp.MainCatagoriesFragment"
+        android:label="fragment_main_catagories"
+        tools:layout="@layout/fragment_main_catagories" />
 </navigation>
